--- a/sass/lib/_mixins.sass
+++ b/sass/lib/_mixins.sass
@@ -117,8 +117,8 @@
 =font($alias, $name)
 	@font-face
 		font-family: $alias
-		src: url("fonts/" + $name + ".eot")
-		src: url("fonts/" + $name + ".eot?#iefix") format("embedded-opentype"), url("fonts/" + $name + ".woff") format("woff"), url("fonts/" + $name + ".ttf") format("truetype")
+		src: url("../fonts/" + $name + ".eot")
+		src: url("../fonts/" + $name + ".eot?#iefix") format("embedded-opentype"), url("../fonts/" + $name + ".woff") format("woff"), url("../fonts/" + $name + ".ttf") format("truetype")
 		font-weight: normal
 		font-style: normal
 
@@ -139,10 +139,10 @@
 	-moz-transition: $what
 	-o-transition: $what
 	-webkit-transition: $what
-	-ms-transition: $what
+	-ms-transition: $what 
 	transition: $what
 
-=tr($what)
+=tr($what: all .2s linear)
 	+transition($what)
 
 =hide-text
