--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,3 @@
-/*done by Coderiver.com.ua */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; vertical-align: baseline; }
 
 body, html { height: 100%; }
@@ -19,9 +18,106 @@ ul, ol { list-style-type: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { * { -webkit-text-size-adjust: none; } }
 table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
-body { font-family: Arial, sans-serif; font-size: 12px; line-height: 1.4; }
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-.l { *zoom: 1; }
-.l:after { content: " "; display: table; clear: both; }
-.l .l-col1 { float: left; width: 20%; }
-.l .l-col2 { float: right; width: 70%; }
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+*:before, *:after { -moz-box-sizing: inherit; -webkit-box-sizing: inherit; box-sizing: inherit; }
+
+@font-face { font-family: geometria; src: url("../fonts/geometria.eot"); src: url("../fonts/geometria.eot?#iefix") format("embedded-opentype"), url("../fonts/geometria.woff") format("woff"), url("../fonts/geometria.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: geometria-bold; src: url("../fonts/geometria-bold.eot"); src: url("../fonts/geometria-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/geometria-bold.woff") format("woff"), url("../fonts/geometria-bold.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: geometria-medium; src: url("../fonts/geometria-medium.eot"); src: url("../fonts/geometria-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/geometria-medium.woff") format("woff"), url("../fonts/geometria-medium.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: geometria-extablack; src: url("../fonts/geometria-extablack.eot"); src: url("../fonts/geometria-extablack.eot?#iefix") format("embedded-opentype"), url("../fonts/geometria-extablack.woff") format("woff"), url("../fonts/geometria-extablack.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: celestepro; src: url("../fonts/celestepro.eot"); src: url("../fonts/celestepro.eot?#iefix") format("embedded-opentype"), url("../fonts/celestepro.woff") format("woff"), url("../fonts/celestepro.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: celestepro-bold; src: url("../fonts/celestepro-bold.eot"); src: url("../fonts/celestepro-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/celestepro-bold.woff") format("woff"), url("../fonts/celestepro-bold.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: celestepro-medium; src: url("../fonts/celestepro-medium.eot"); src: url("../fonts/celestepro-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/celestepro-medium.woff") format("woff"), url("../fonts/celestepro-medium.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: celestepro-bookita; src: url("../fonts/celestepro-bookita.eot"); src: url("../fonts/celestepro-bookita.eot?#iefix") format("embedded-opentype"), url("../fonts/celestepro-bookita.woff") format("woff"), url("../fonts/celestepro-bookita.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: celestepro-ita; src: url("../fonts/celestepro-ita.eot"); src: url("../fonts/celestepro-ita.eot?#iefix") format("embedded-opentype"), url("../fonts/celestepro-ita.woff") format("woff"), url("../fonts/celestepro-ita.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+body { font-family: "celestepro", Arial, sans-serif; font-size: 18px; line-height: 1.3; background: #f8f5f3; }
+
+a { text-decoration: none; }
+
+.l-center { margin: 0 auto; max-width: 1100px; }
+
+.title { margin: 50px 0 25px; font-size: 36px; font-family: "geometria-extablack", Arial, sans-serif; color: #6e5b50; text-align: center; letter-spacing: 5px; }
+
+.to-center { text-align: center; }
+
+.header { position: fixed; top: 0; left: 0; right: 0; z-index: 10; padding: 8px 25px; background: rgba(0, 0, 0, 0.7); }
+.header .l-center { text-align: justify; font-size: 0; }
+.header .l-center:after { content: ""; display: inline-block; width: 100%; height: 0; }
+.header__link, .header__tel { display: inline-block; vertical-align: middle; }
+.header__link { font-size: 14px; color: white; font-family: "geometria-bold", Arial, sans-serif; text-transform: uppercase; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.header__link:hover { text-decoration: none; color: #73bedf; }
+.header__logo { margin-left: 32px; background: url("../img/svg/logo.svg") no-repeat 0 0; width: 26px; height: 43px; display: inline-block; vertical-align: middle; font: 0/0 a; text-shadow: none; color: transparent; }
+.header__tel { color: #ff8433; font-size: 14px; font-family: "geometria-medium", Arial, sans-serif; }
+
+.logo { position: absolute; top: 94px; left: 0; right: 0; z-index: 3; color: white; text-align: center; }
+.logo__icon { background: url("../img/svg/logo-big.svg") no-repeat 0 0; width: 41px; height: 65px; display: inline-block; }
+.logo__title { margin-bottom: 7px; font-family: "geometria-extablack", Arial, sans-serif; font-size: 31px; font-weight: normal; letter-spacing: 4px; }
+.logo span { margin-bottom: 7px; text-transform: uppercase; display: block; font-family: "geometria-medium", Arial, sans-serif; font-size: 11px; }
+.logo em { display: block; line-height: 1.2; font-style: normal; font-family: "celestepro-ita", Arial, sans-serif; font-size: 12px; }
+
+.footer { margin: 0 auto; border-top: 2px solid rgba(170, 146, 131, 0.5); padding: 45px 0; max-width: 870px; text-align: center; color: #aa9283; font-size: 16px; line-height: 2.5; font-family: "geometria", Arial, sans-serif; }
+.footer__copy { color: #6e5b50; font-family: "geometria-medium", Arial, sans-serif; }
+.footer a { font-family: "geometria-medium", Arial, sans-serif; color: #234a5c; }
+
+.link { display: inline-block; border: 2px solid #234a5c; padding: 11px 30px; line-height: 1; font-family: "geometria-extablack", Arial, sans-serif; font-size: 14px; text-transform: uppercase; color: #234a5c; text-align: center; letter-spacing: 1px; background: none; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.link:hover { color: white; background: rgba(23, 64, 83, 0.8); border: 2px solid rgba(23, 64, 83, 0); }
+.link:active { color: white; background: #174053; border: 2px solid rgba(23, 64, 83, 0); }
+
+.link-action { display: inline-block; border: 2px solid white; padding: 11px 30px 10px; line-height: 1; font-family: "geometria-extablack", Arial, sans-serif; font-size: 15px; text-transform: uppercase; color: white; text-align: center; font-weight: normal; letter-spacing: 1px; background: none; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; -webkit-transition: all 0.2s linear; transition: all 0.2s linear; }
+.link-action:hover { color: black; background: rgba(255, 255, 255, 0.8); border: 2px solid rgba(255, 255, 255, 0); }
+.link-action:active { color: black; background: white; border: 2px solid rgba(255, 255, 255, 0); }
+
+.is-liquid { display: block; padding: 11px 0; text-align: center; }
+
+.top-section { position: relative; height: 100vh; overflow: hidden; text-align: center; }
+.top-section:before { content: ""; position: absolute; z-index: 1; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.6); }
+.top-section__img { position: absolute; top: 0; bottom: 0; left: 50%; z-index: -1; margin-left: -1500px; width: 3000px; }
+.top-section__title { position: absolute; z-index: 2; bottom: 146px; left: 0; right: 0; font-size: 36px; color: white; font-family: "geometria-medium", Arial, sans-serif; }
+.top-section__title span { display: inline-block; max-width: 560px; }
+
+.scroll-down { position: absolute; bottom: 42px; left: 0; right: 0; z-index: 2; font-size: 18px; }
+.scroll-down a { font-family: "celestepro-ita", Arial, sans-serif; color: white; }
+.scroll-down span { display: block; margin: 0 0 6px; }
+.scroll-down i { background: url("../img/svg/arr1.svg") no-repeat 0 0; width: 23px; height: 20px; display: inline-block; }
+
+.benefits-wrap { padding: 0 11%; text-align: justify; font-size: 0; }
+.benefits-wrap:after { content: ""; display: inline-block; width: 100%; height: 0; }
+.benefits-wrap + .to-center { margin-bottom: 64px; }
+
+.benefit { display: inline-block; margin-bottom: 40px; width: 245px; vertical-align: top; text-align: center; font-size: 18px; line-height: 1.2; }
+.benefit__title { margin-bottom: 13px; font-family: "geometria-medium", Arial, sans-serif; font-size: 20px; color: #234a5c; }
+.benefit__text { color: #aa9283; }
+
+.projects-wrap { *zoom: 1; position: relative; }
+.projects-wrap:after { content: " "; display: table; clear: both; }
+.projects-wrap .title { position: absolute; top: 110px; right: 0; left: 0; margin: 0; z-index: 2; color: black; }
+
+.project { position: relative; float: left; width: 33.3%; height: 660px; color: white; }
+.project__info { position: absolute; bottom: 0; left: 0; right: 0; padding: 30px 12%; font-size: 16px; background: rgba(0, 0, 0, 0.7); text-align: center; }
+.project__title { margin: 0 0 19px; font-family: "geometria-bold", Arial, sans-serif; font-size: 18px; text-align: center; text-transform: uppercase; letter-spacing: 2px; }
+.project .param-list { margin-bottom: 23px; }
+
+.param-list { font-family: "geometria-bold", Arial, sans-serif; line-height: 1.6; text-align: left; }
+.param-list span { display: inline-block; width: 50%; font-size: 16px; font-family: "celestepro", Arial, sans-serif; }
+
+.plan { margin-bottom: 45px; padding: 0 5%; text-align: center; }
+.plan__badges { margin-bottom: 23px; font-size: 16px; line-height: 1; }
+.plan__badges li { display: inline-block; width: 26%; text-align: left; color: #aa9283; font-family: "geometria", Arial, sans-serif; }
+.plan__badges span { font-family: "geometria-bold", Arial, sans-serif; }
+.plan__badges div { display: inline-block; vertical-align: middle; }
+.plan__img { overflow: hidden; position: relative; }
+.plan__img img { display: block; max-width: 100%; }
+
+.window { position: absolute; width: 236px; padding: 28px 18px; background: black; background: rgba(0, 0, 0, 0.7); color: white; text-align: center; font-size: 16px; }
+.window__title { margin-bottom: 18px; font-size: 18px; font-family: "geometria-extablack", Arial, sans-serif; }
+.window__close { position: absolute; top: 11px; right: 11px; background: url("../img/svg/close.svg") no-repeat 0 0; width: 14px; height: 14px; display: inline-block; }
+.window__close:active { top: 12px; }
+.window .param-list { margin-bottom: 15px; text-align: left; }
+.window .link-action { margin-top: 24px; }
+
+.color { display: inline-block; margin: 0 8px 0 0; vertical-align: middle; width: 25px; height: 25px; }
+.color_blue { background: #73bedf; }
+.color_green { background: #56be5b; }
+.color_orange { background: #ff8433; }
