--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -36,48 +36,139 @@
 //				display: none
 // ## fonts 
 // Save fonts to /css/fonts, after that write (eot, woff, ttf):
-// +font(book, cytiapro-black-webfont)  
-// =book
-// 	font-family: "book", Arial, sans-serif 
-// insert pics into css
-// div
-// 	+pic("blabla.png")
-// span
-// 	+png(blabla)
-// p
-// 	+jpg(bla)
 
-
++font(geometria, geometria)  
+=greg
+	font-family: "geometria", Arial, sans-serif 
++font(geometria-bold, geometria-bold)  
+=gbold
+	font-family: "geometria-bold", Arial, sans-serif 
++font(geometria-medium, geometria-medium)  
+=gmed
+	font-family: "geometria-medium", Arial, sans-serif 
++font(geometria-extablack, geometria-extablack)  
+=gextra
+	font-family: "geometria-extablack", Arial, sans-serif 
+	 
++font(celestepro, celestepro)  
+=creg
+	font-family: "celestepro", Arial, sans-serif 
++font(celestepro-bold, celestepro-bold)  
+=cbold
+	font-family: "celestepro-bold", Arial, sans-serif 
++font(celestepro-medium, celestepro-medium)  
+=cmed
+	font-family: "celestepro-medium", Arial, sans-serif 
++font(celestepro-bookita, celestepro-bookita)  
+=cbook
+	font-family: "celestepro-bookita", Arial, sans-serif 
++font(celestepro-ita, celestepro-ita)  
+=cit
+	font-family: "celestepro-ita", Arial, sans-serif 
+$brown: #6e5b50 
+$brown_l: #aa9283
+$blue: #73bedf
+$blue_d: #234a5c
+$green: #56be5b
+$orange: #ff8433
 body
-	font-family: Arial, sans-serif 
-	font-size: 12px 
-	line-height: 1.4
-
-
+	+creg
+	font-size: 18px 
+	line-height: 1.3
+	background: #f8f5f3 
+a
+	text-decoration: none
+.l-center
+	margin: 0 auto
+	max-width: 1100px 
+.title
+	margin: 50px 0 25px 
+	font-size: 36px
+	+gextra
+	color: $brown
+	text-align: center
+	letter-spacing: 5px  
+.to-center
+	text-align: center
 // common blocks      
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	
+.header
+	position: fixed
+	top: 0
+	left: 0
+	right: 0
+	z-index: 10
+	padding: 8px 25px 
+	background: rgba(#000,.7) 
+	.l-center
+		+justify
+	&__link,
+	&__tel
+		display: inline-block
+		vertical-align: middle
+	&__link
+		font-size: 14px
+		color: #fff
+		+gbold
+		text-transform: uppercase
+		+tr
+		&:hover
+			text-decoration: none
+			color: $blue 
+	&__logo
+		margin-left: 32px
+		+svg(logo,26,43)
+		vertical-align: middle
+		+hide-text
+	&__tel
+		color: $orange
+		font-size: 14px 
+		+gmed
+.logo
+	position: absolute
+	top: 94px 
+	left: 0
+	right: 0
+	z-index: 3
+	color: #fff 
+	text-align: center
+	&__icon
+		+svg(logo-big,41,65)
+	&__title
+		margin-bottom: 7px
+		+gextra
+		font-size: 31px
+		font-weight: normal
+		letter-spacing: 4px
+	span
+		margin-bottom: 7px
+		text-transform: uppercase
+		display: block
+		+gmed
+		font-size: 11px
+	em
+		display: block
+		line-height: 1.2
+		font-style: normal
+		+cit
+		font-size: 12px
+.footer
+	margin: 0 auto 
+	border-top: 2px solid rgba($brown_l,.5) 
+	padding: 45px 0 
+	max-width: 870px
+	text-align: center
+	color: $brown_l
+	font-size: 16px
+	line-height: 2.5
+	+greg
+	&__copy
+		color: $brown 
+		+gmed
+	a
+		+gmed
+		color: $blue_d 
+	
 
 
 
