--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,216 +1,175 @@
-// Normally mainpage styles
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.top-section
+	position: relative
+	height: 100vh
+	overflow: hidden
+	text-align: center
+	&:before
+		content: ""
+		position: absolute
+		z-index: 1
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background: rgba(#000,.6) 
+	&__img
+		position: absolute
+		top: 0
+		bottom: 0
+		left: 50%
+		z-index: -1
+		margin-left: -1500px
+		width: 3000px
+	&__title
+		position: absolute
+		z-index: 2
+		bottom: 146px
+		left: 0
+		right: 0
+		font-size: 36px
+		color: #fff
+		+gmed  
+		span
+			display: inline-block
+			max-width: 560px
+.scroll-down
+	position: absolute
+	bottom: 42px
+	left: 0
+	right: 0 
+	z-index: 2
+	font-size: 18px
+	a
+		+cit
+		color: #fff 
+	span
+		display: block
+		margin: 0 0 6px 
+	i
+		+svg(arr1,23,20) 
+.benefits-wrap
+	padding: 0 11%
+	+justify
+	+ .to-center
+		margin-bottom: 64px
+.benefit
+	display: inline-block
+	margin-bottom: 40px
+	width: 245px
+	vertical-align: top
+	text-align: center
+	font-size: 18px
+	line-height: 1.2
+	&__title
+		margin-bottom: 13px
+		+gmed
+		font-size: 20px
+		color: $blue_d
+	&__text
+		color: $brown_l 
+.projects-wrap
+	+clr
+	position: relative
+	.title
+		position: absolute
+		top: 110px
+		right: 0
+		left: 0
+		margin: 0
+		z-index: 2
+		color: #000 
+.project
+	position: relative
+	float: left
+	width: 33.3%
+	height: 660px
+	color: #fff 
+	&__info
+		position: absolute
+		bottom: 0
+		left: 0
+		right: 0
+		padding: 30px 12% 
+		font-size: 16px
+		background: rgba(#000, .7) 
+		text-align: center
+	&__title
+		margin: 0 0 19px 
+		+gbold
+		font-size: 18px
+		text-align: center
+		text-transform: uppercase
+		letter-spacing: 2px 
+	.param-list
+		margin-bottom: 23px
+.param-list
+	+gbold
+	line-height: 1.6
+	text-align: left
+	span
+		display: inline-block
+		width: 50%
+		font-size: 16px
+		+creg
+.plan
+	margin-bottom: 45px
+	padding: 0 5%
+	text-align: center
+	&__badges
+		margin-bottom: 23px
+		font-size: 16px
+		line-height: 1
+		li
+			display: inline-block
+			width: 26%
+			text-align: left
+			color: $brown_l
+			+greg
+		span
+			+gbold
+		div
+			display: inline-block
+			vertical-align: middle
+	&__img
+		overflow: hidden
+		position: relative
+		img
+			display: block
+			max-width: 100%
+.window
+	position: absolute
+	width: 236px
+	padding: 28px 18px 
+	background: #000 
+	background: rgba(#000,.7) 
+	color: #fff 
+	text-align: center
+	font-size: 16px
+	&__title
+		margin-bottom: 18px
+		font-size: 18px
+		+gextra
+	&__close
+		position: absolute
+		top: 11px
+		right: 11px
+		+svg(close,14,14)
+		&:active
+			top: 12px
+	.param-list
+		margin-bottom: 15px
+		text-align: left
+	.link-action
+		margin-top: 24px
+.color
+	display: inline-block
+	margin: 0 8px 0 0
+	vertical-align: middle
+	width: 25px
+	height: 25px
+	&_blue
+		background: $blue 
+	&_green
+		background: $green 
+	&_orange
+		background: $orange 
