--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -10,7 +10,10 @@
     text-align: center 
     letter-spacing: 1px 
     background: none
+    border-radius: 2px 
     +tr
+    +r(768)
+        font-size: 15px
     &:hover
         color: #fff 
         background: rgba(#174053, .8) 
@@ -32,6 +35,7 @@
     font-weight: normal
     letter-spacing: 1px  
     background: none
+    border-radius: 2px 
     +tr
     &:hover
         color: #000 
