--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -73,6 +73,7 @@ $green: #56be5b
 $orange: #ff8433
 body
 	+creg
+	min-width: 320px
 	font-size: 18px 
 	line-height: 1.3
 	background: #f8f5f3 
@@ -82,12 +83,15 @@ a
 	margin: 0 auto
 	max-width: 1100px 
 .title
-	margin: 50px 0 25px 
+	margin: 111px 0 25px 
 	font-size: 36px
 	+gextra
 	color: $brown
 	text-align: center
-	letter-spacing: 5px  
+	letter-spacing: 5px
+	+r(768)
+		font-size: 25px
+		margin: 93px 0 25px   
 .to-center
 	text-align: center
 // common blocks      
@@ -100,6 +104,8 @@ a
 	z-index: 10
 	padding: 8px 25px 
 	background: rgba(#000,.7) 
+	+r(960)
+		padding: 8px 20px 
 	.l-center
 		+justify
 	&__link,
@@ -112,6 +118,10 @@ a
 		+gbold
 		text-transform: uppercase
 		+tr
+		+r(960)
+			font-size: 12px
+		+r(768)
+			display: none
 		&:hover
 			text-decoration: none
 			color: $blue 
@@ -120,10 +130,35 @@ a
 		+svg(logo,26,43)
 		vertical-align: middle
 		+hide-text
+		+r(960)
+			margin: 0
 	&__tel
 		color: $orange
 		font-size: 14px 
-		+gmed
+		+gbold
+		+r(960)
+			font-size: 12px
+		button
+			+svg(tel,25,29)
+			display: none
+			+r(768)
+				display: block
+		span
+			+r(768)
+				display: none
+	&__nav
+		display: none
+		+r(780)
+			display: inline-block
+			vertical-align: middle
+		button
+			+svg(nav,25,23)
+			
+		ul
+			position: absolute
+			top: 100%
+			left: 0
+		 
 .logo
 	position: absolute
 	top: 94px 
@@ -133,6 +168,7 @@ a
 	color: #fff 
 	text-align: center
 	&__icon
+		margin-bottom: 8px
 		+svg(logo-big,41,65)
 	&__title
 		margin-bottom: 7px
@@ -162,6 +198,8 @@ a
 	font-size: 16px
 	line-height: 2.5
 	+greg
+	+r(768)
+		padding: 20px 0 
 	&__copy
 		color: $brown 
 		+gmed
