--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,7 +1,7 @@
 .top-section
 	position: relative
 	height: 100vh
-	min-height: 600px
+	min-height: 480px
 	overflow: hidden
 	text-align: center
 	background: url("../img/main-bg.jpg") 0 0 no-repeat
@@ -33,6 +33,9 @@
 		font-size: 36px
 		color: #fff
 		+gmed  
+		+r(768)
+			bottom: 115px
+			font-size: 19px	
 		span
 			display: inline-block
 			max-width: 560px
