--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -89,7 +89,8 @@ body
 	+tr(transform .2s linear)
 	&.has-open-nav
 		.l-main,
-		.header
+		.header,
+		.nav
 			+translateX(266px) 
 a
 	text-decoration: none
@@ -181,6 +182,7 @@ a
 	text-transform: uppercase
 	text-align: center
 	+vertical
+	+tr(transform .2s linear)
 	ul
 		display: inline-block
 		vertical-align: middle
